# artifacts/api-server/src/routes/index.ts
@@ -1,8 +1,10 @@
 import { Router, type IRouter } from "express";
+import analysisRouter from "./analysis";
 import healthRouter from "./health";
 
 const router: IRouter = Router();
 
 router.use(healthRouter);
+router.use(analysisRouter);
 
 export default router;
